@@ -1,3 +1,6 @@
+Jan 11, 2008: Ludwig Nussel <@users.sourceforge.net>
+- fix busy loop when client exits
+
 Nov 04, 2007: Ludwig Nussel <l-n@users.sourceforge.net>
 - close fds before launching games
 
